tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.diagnostic
diagnostic error code=O0001 family=ownership message="compact enum payload reference binding for i32 is value-only; use a value pattern or an addressable aggregate enum payload" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" bytes=132
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" line=8 column=11 end_line=8 end_column=15 byte_start=98 byte_end=102 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari:8:11\n   |\n 8 |   let ref Some(value) = item;\n   |           ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" line=3 column=8 end_line=3 end_column=11 byte_start=28 byte_end=31 message="enum case 'Some' stores payload i32 in a compact value-only slot"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari:3:8\n   |\n 3 |   Some(i32),\n   |        ^^^"
  Note index=0 location=none message="compact enum payloads are stored as value slots, so ref patterns cannot borrow a stable payload address"
  Help index=0 location=none message="remove ref from this pattern, or use an addressable aggregate payload layout for data that must be borrowed"
